feat: Resize avatars depends on the needed display size - EXO-60290 - Meeds-io/MIPs#25
Update the listener name for having a name more understable.
Update the listener to move the business rule outside of the listener (create function deleteThumbnails in ImageThumbnailService)
Update the rest service (user and space) to have a specific etag in function of the size, so that cache management can work correctly
Add comments and unit test on how to get default avatar size for users and spaces
Rework RestService to get user and space avatar to be more efficient : do not load the default input stream or the avatar original input stream if not needed